# meghdoot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mdapi.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml  mosdac_config.json
scripts/: sync_gcs.py
src/meghdoot/: __init__.py  cli.py
src/meghdoot/data/: __init__.py  dataset.py  mdapi.py  preprocessing.py
src/meghdoot/deploy/: __init__.py  api.py
src/meghdoot/evaluation/: __init__.py  baselines.py  benchmark.py  metrics.py
src/meghdoot/models/: __init__.py  channel_fusion.py  diffusion.py  temporal_loss.py  vae.py
src/meghdoot/training/: __init__.py  fine_tuning.py  train_diffusion.py  train_vae.py
src/meghdoot/utils/: __init__.py  config.py  helpers.py  logging.py
tests/: conftest.py  test_api.py  test_dataset.py  test_mdapi.py  test_metrics.py  test_models.py  test_preprocessing.py  test_utils.py
